# polytomo

./: CMakeLists.txt  constraintgenerator.cpp  constraintgenerator.h  inversionmesh.cpp  inversionmesh.h  main.cpp  mainwindow.cpp  mainwindow.h  meshadapter.cpp  meshadapter.h  modelgenerator.cpp  modelgenerator.h  solver_main.cpp  visualizerx.cpp  visualizerx.h  visualizerx_corrected.cpp
